syntax = "proto3";

package prac.net;

option go_package = ".;pb";
option java_package = "dev.glycine.pracstation.pb";
option java_multiple_files = true;

message Signal{
  enum SignalState{
    UNKNOWN = 0;
    BROKEN = 1;
    BLACK = 2;
    RED = 3;
    YELLOW = 4;
    DOUBLE_YELLOW = 5;
    GREEN = 6;
    BLUE = 7;
    WHITE = 8;
  }
  string id = 1;
  SignalState state = 2;
}