syntax = "proto3";

package prac.net;

import "button_list_message.proto";
import "signal_message.proto";
import "section_message.proto";
import "turnout_message.proto";
import "init_route_message.proto";
import "google/protobuf/empty.proto";

option go_package = ".;pb";
option java_package = "dev.glycine.pracstation.pb";
option java_multiple_files = true;

message RefreshStationResponse{
  oneof value {
    Signal signal = 1;
    Turnout turnout = 2;
    Section section = 3;
  }
}

message InitStationResponse{
  repeated Signal signal = 1;
  repeated Turnout turnout = 2;
  repeated Section section = 3;
  repeated InitRouteMessage route = 4;
}

message CreateRouteRequest{
  ButtonList buttons = 1;
}

message CreateRouteResponse{
  string route_id = 1;
}

message CancelRouteRequest{
  string route_id = 1;
}

message ManualUnlockRouteRequest{
  string route_id = 1;
}

message ErrorUnlockRouteRequest{
  string route_id = 1;
}

service StationService {
  rpc InitStation(google.protobuf.Empty) returns (InitStationResponse){};
  rpc RefreshStation(google.protobuf.Empty) returns (stream RefreshStationResponse){};
  rpc CreateRoute(CreateRouteRequest) returns (CreateRouteResponse){};
  rpc CancelRoute(CancelRouteRequest) returns (google.protobuf.Empty){};
  rpc ManualUnlockRoute(ManualUnlockRouteRequest) returns (google.protobuf.Empty){};
  rpc ErrorUnlockRoute(ErrorUnlockRouteRequest) returns (google.protobuf.Empty){};
}
